# Educational-Management-System

./: CMakeLists.txt  README.md  main.cpp
Core/: Admin.h  Course.h  Person.h  Student.h  SubAdmin.h
DataSource/: Admin.txt  AllAdmin.txt  AllUsers.txt
DataSource/ComputerScience/Students/: 1002.txt  1003.txt  All.txt
DataSource/Students/: All.txt  All.txt.txt  S1009.txt
DataSource/Students/Details/Courses/: AllCourses  BS000  BS100  BS101  BS102  BS103  BU102  CS100  CS101  CS102  CS103  DS100  HU100  HU102  IT100  IT102
DataSource/Students/Details/StudentsInfo/: Courses_111111.txt  Student_111111.txt  Student_111112.txt  Student_111113.txt  Student_111114.txt  Student_111115.txt  Student_111116.txt  Student_111117.txt  Student_111118.txt  Student_111124.txt  Student_111125.txt  Student_111126.txt  Student_111127.txt  Student_111128.txt  Student_111129.txt  Student_111130.txt  Student_111131.txt  Student_111132.txt  Student_111133.txt  Student_111134.txt  Student_111135.txt  Student_111136.txt  Student_111137.txt  (+6 more)
Global/: Global.h  LoginUser.h
Screens/: LoginScreen.h  Screen.h  Start.h
Screens/AdminScreens/: AddNewSubAdminScreen.h  AdminMainScreen.h  deleteAdmin.h  showAllSubAdmins.h
Screens/StudentScreens/: GetStudentIDScreen.h  RegisteretionScreen.h  RegistrationScreen.h  RegistredCoursesScreen.h  StudentMainScreen.h
Screens/sAdminScreens/: AddNewCourseScreen.h  AddNewStudentScreen.h  AllStudentsScreen.h  SettingStudentMarksScreen.h  StudentReportScreen.h  StudentsScreen.h  sAdminMainScreen.h
lib/: clsDate.h  clsInputValidate.h  clsString.h
